--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,5 @@
 DISCORD_TOKEN=your_discord_bot_token_here
 DISCORD_CHANNEL_ID=your_discord_channel_id_here
 
-# Forum URL to monitor
-FORUM_URL=https://forum.norestforthewicked.com/c/no-rest-for-the-wicked/5
-
-# Check interval in milliseconds (default: 1 day = 86400000)
-CHECK_INTERVAL=86400000
+# Note: FORUM_URL and CHECK_INTERVAL are now hardcoded constants in the code
+# They are not secrets, so they don't need to be in environment variables
