fix update on the scheduler

--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,4 @@
 DISCORD_TOKEN=your_discord_bot_token_here
 DISCORD_CHANNEL_ID=your_discord_channel_id_here
 
-# Note: FORUM_URL and CHECK_INTERVAL are now hardcoded constants in the code
-# They are not secrets, so they don't need to be in environment variables
+# FORUM_URL and schedule are hardcoded in the code (netlify/functions or src/config.ts)
