--- a/package.json
+++ b/package.json
@@ -11,15 +11,21 @@
     "fetch-utility-runes": "node scripts/fetch-utility-runes.mjs",
     "register-discord-commands": "node scripts/register-discord-commands.mjs"
   },
-  "keywords": ["discord", "bot", "forum", "monitor"],
+  "keywords": [
+    "discord",
+    "bot",
+    "forum",
+    "monitor"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "discord.js": "^14.14.1",
     "axios": "^1.6.7",
     "cheerio": "^1.0.0-rc.12",
+    "discord.js": "^14.14.1",
     "dotenv": "^16.4.1",
-    "form-data": "^4.0.0"
+    "form-data": "^4.0.0",
+    "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
     "@netlify/functions": "^2.8.2",
